--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,60 @@
 // Import all of Bootstrap’s CSS
 @import "bootstrap/scss/bootstrap";
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  font-family: "Poppins";
+}
+.clients-review-container {
+  display: flex;
+  max-width: 100%;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+
+  .clients-review {
+    flex: 0 0 400px;
+  }
+}
+
+.my-card {
+  .card-body {
+    .my-btn {
+      border-radius: 2px;
+      border-style: solid;
+      border-color: black;
+    }
+  }
+}
+.my-card:hover {
+  transform: scaleY(1.1);
+  background-color: #6069ec;
+  .card-body {
+    color: white;
+    .my-btn {
+      border: 0;
+      background-color: #fad725;
+    }
+  }
+}
+.hero-body {
+  font-size: 15px;
+  color: #727272;
+}
+.hero-cards {
+  width: 20rem;
+  height: 15rem;
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+.hero-btn {
+  font-size: 24px;
+  font-weight: 400;
+  @media (min-width: 768px) {
+    margin-top: 1.5rem;
+  }
+}
