--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+a {
+  color: black;
+  text-decoration: none;
+}
 body {
   font-family: "Poppins";
 }
@@ -46,15 +50,124 @@ body {
   width: 20rem;
   height: 15rem;
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
-
   &:hover {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+  .card-body {
+    .hero-card-body {
+      font-size: 15px;
+      color: #727272;
+    }
+    div {
+      .hero-card-heading {
+        font-size: 20px;
+        font-weight: normal;
+      }
+    }
+  }
 }
 .hero-btn {
-  font-size: 24px;
+  font-size: 14px;
+  width: 120px;
+  height: 40px;
   font-weight: 400;
-  @media (min-width: 768px) {
+  margin-right: 10px;
+  @media (min-width: 992px) {
+    font-size: 15px;
+    margin-right: 0px;
     margin-top: 1.5rem;
+    width: 150px;
+    height: 50px;
+  }
+}
+.hero-section-h1 {
+  @media (min-width: 768px) {
+    font-weight: bold;
+    font-size: 60px;
+  }
+}
+
+.optimise-container {
+  .heading {
+    font-weight: 500;
+    font-size: 25px;
+  }
+  .heading-caption {
+    color: #727272;
+  }
+
+  @media (min-width: 1400px) {
+    margin-bottom: 233px;
+    margin-top: 150px;
+    .container-inside {
+      margin-bottom: 200px;
+      div {
+        .card {
+          .card-body {
+            div {
+              img {
+                width: 85px;
+                height: 92px;
+                margin-bottom: 91px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .heading {
+      font-weight: 500;
+      font-size: 40px;
+    }
+  }
+}
+.solution-div {
+  background-image: url("./assets/images/Group\ 678.svg");
+  background-size: cover;
+  background-position: center;
+  .solution-row .solution-col-1 .solution-heading-text {
+    font-weight: 500;
+    font-size: 25px;
+  }
+  .solution-row .solution-col-1 .solution-heading-caption {
+    color: #727272;
+  }
+}
+
+.solution-div .solution-heading-highlight {
+  color: #6f77f1;
+}
+.solution-div .solution-row .solution-col-1 button {
+  font-size: 14px;
+  width: 120px;
+  height: 40px;
+  font-weight: 400;
+  margin-right: 10px;
+  @media (min-width: 992px) {
+    font-size: 15px;
+    margin-right: 0px;
+    margin-top: 1.5rem;
+    width: 150px;
+    height: 50px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .solution-div .solution-row .solution-col-1 .solution-heading-text {
+    font-size: 40px;
+  }
+}
+
+.business-container {
+  .business-row {
+    .card {
+      .card-body {
+        div {
+          .card-title {
+            font-size: medium;
+          }
+        }
+      }
+    }
   }
 }
