--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,30 @@
 @import "bootstrap/scss/bootstrap";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
-
+//$filename, $extension: "png", $path: "../images/"
+//"../assets/images/3.png"
+@mixin optimise-card-mixin(
+  $filename,
+  $extension: "png",
+  $path: "../assets/images/"
+) {
+  background: url($path + $filename + "." + $extension);
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position: 150px 90px;
+  border: 0;
+  &:hover {
+    transform: scale(1);
+    box-shadow: 0 10px 14px 2px rgba(0, 0, 0, 0.15);
+    background-color: #fff;
+    border-radius: 0.25rem;
+    border-bottom: 2px solid #6f77f1;
+  }
+}
+.hero-cards-img {
+  width: 60px;
+  height: 70px;
+}
 a {
   color: black;
   text-decoration: none;
@@ -68,8 +91,14 @@ body {
 @media (min-width: 1400px) {
   .our-creative-team {
     z-index: -1;
-    left: 80px;
     bottom: 35px;
+  }
+}
+@media (min-width: 1920px) {
+  .our-creative-team {
+    z-index: -1;
+    left: 80px;
+    bottom: 50px;
   }
 }
 .clients-review-container {
@@ -84,16 +113,18 @@ body {
   }
 }
 .clients-review-card {
+  background: url("../assets/images/clients-bg.png") no-repeat;
+  background-position: 27px 31px;
   margin-bottom: 100px;
   border: 1;
   border-radius: 0;
-  animation: slide 5s infinite;
+  animation: slide 8s infinite;
   @keyframes slide {
     from {
-      transform: translateX(-100px); /* Starting position */
+      transform: translateX(100px);
     }
     to {
-      transform: translateX(100px); /* Ending position */
+      transform: translateX(-300px);
     }
   }
   transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -117,7 +148,14 @@ body {
   transform: scaleY(1.1);
   background-color: #6069ec;
   .card-body {
-    color: white;
+    .card-text {
+      .money-txt {
+        color: white !important;
+      }
+      .bandwith {
+        color: white !important;
+      }
+    }
     .my-btn {
       border: 0;
       background-color: #fad725;
@@ -242,19 +280,21 @@ body {
   }
 }
 
-.optimise-card {
-  background: url("../assets/images/3.png");
-  background-repeat: no-repeat;
-  background-size: 30%;
-  background-position: 150px 90px;
-  border: 0;
-  &:hover {
-    transform: scale(1);
-    box-shadow: 0 10px 14px 2px rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-    border-radius: 0.25rem;
-    border-bottom: 2px solid #6f77f1;
-  }
+.optimise-card-1 {
+  @include optimise-card-mixin("1");
+  width: 19rem;
+}
+.optimise-card-2 {
+  @include optimise-card-mixin("2");
+  width: 19rem;
+}
+.optimise-card-3 {
+  @include optimise-card-mixin("3");
+  width: 19rem;
+}
+.optimise-card-4 {
+  @include optimise-card-mixin("4");
+  width: 19rem;
 }
 .optimise-container {
   .heading {
@@ -292,6 +332,7 @@ body {
 }
 .solution-div {
   background-image: url("./assets/images/Group\ 678.svg");
+  background-color: #fafafa;
   background-size: cover;
   background-position: center;
   .solution-row .solution-col-1 .solution-heading-text {
@@ -412,6 +453,13 @@ body {
   .box-caption {
     font-size: 12px;
     color: #828282;
+  }
+}
+.need-cards {
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 5px 25px 37px 0px rgba(0, 0, 0, 0.15) !important;
   }
 }
 .need-icon {
@@ -557,7 +605,9 @@ body {
   color: #828282;
   font-size: 15px;
 }
-
+.optimise-text {
+  color: #828282;
+}
 @media (min-width: 992px) {
   .expert-heading {
     font-weight: 500;
@@ -583,13 +633,318 @@ body {
     width: 1650px !important;
     max-width: 1650px !important;
   }
-  .hero-section-h1 {
-    font-size: 80px;
+  .girl-img {
+    width: 630px;
+    height: 706px;
   }
+  .hero-section-h1 {
+    font-size: 90px;
+    span {
+      .expert-icon {
+        width: 198.33px !important;
+        height: 80px !important;
+      }
+    }
+  }
+
   .hero-body {
     font-size: 20px;
   }
   .hero-cards {
     height: 250px;
+  }
+  .hero-btn {
+    width: 218px;
+    height: 76px;
+    padding: auto;
+    font-size: 24px;
+  }
+  .take-a-tour-img {
+    width: 178px;
+    height: 69px;
+  }
+  .hero-cards {
+    width: 513px;
+    height: 334px;
+
+    .hero-cards-img {
+      width: 129px;
+      height: 129px;
+    }
+    .card-body {
+      .hero-card-body {
+        font-size: 17px;
+      }
+      div {
+        .hero-card-heading {
+          font-size: 38px;
+        }
+      }
+    }
+  }
+  .optimise-container {
+    p:nth-of-type(1) {
+      font-size: 55px;
+    }
+    p:nth-of-type(2) {
+      font-size: 20px;
+    }
+    .container-inside {
+      .optimise-row {
+        .optimise-card-1,
+        .optimise-card-2,
+        .optimise-card-3,
+        .optimise-card-4 {
+          .card-body {
+            div {
+              .card-title {
+                font-size: 24px;
+              }
+            }
+            .optimise-text {
+              font-size: 17px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .solution-div {
+    margin-top: 233px;
+    padding-left: 150px;
+    padding-right: 150px;
+    .solution-row {
+      gap: 45px;
+      .solution-col-1 {
+        .solution-heading-text {
+          font-size: 55px;
+        }
+        .solution-heading-caption {
+          font-size: 17px;
+        }
+        button {
+          width: 214px;
+          height: 76px;
+          padding: auto;
+          font-size: 24px;
+        }
+      }
+      .col-lg-5 {
+        img {
+          width: 607px;
+          height: 343px;
+        }
+      }
+    }
+  }
+  .business-container {
+    margin-bottom: 84px !important;
+    .business-row {
+      div {
+        div {
+          img {
+            height: 71px !important;
+            width: 71px !important;
+            margin-bottom: 22px !important;
+          }
+          .card-title {
+            font-size: 25px !important;
+            margin-bottom: 17px !important;
+          }
+          p {
+            font-size: 17px !important;
+          }
+        }
+      }
+    }
+  }
+  .choose-container {
+    padding-bottom: 0px !important;
+    h2 {
+      font-size: 55px !important;
+    }
+    p {
+      font-size: 17px !important;
+      margin-bottom: 56px !important;
+    }
+    .card-group {
+      div {
+        div {
+          .choose-card {
+            padding-bottom: 0px !important;
+            margin-bottom: 89px !important;
+            img {
+              width: 300px !important;
+              height: 200px !important;
+            }
+            button {
+              padding: auto !important;
+              width: 123px !important;
+              height: 43px !important;
+              margin-top: 0px !important;
+              margin-bottom: 58px !important;
+            }
+            .card-body {
+              .optimization-card-heading {
+                font-size: 20px !important;
+                margin-bottom: 23px !important;
+              }
+              .optimization-card-body {
+                font-size: 17px !important;
+                margin-bottom: 25px !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .need-container {
+    padding-top: 114px !important;
+    padding-bottom: 97px !important;
+    div {
+      div:nth-of-type(1) {
+        img {
+          width: 771px !important;
+          height: 482px !important;
+        }
+      }
+      div:nth-of-type(2) {
+        .need-heading {
+          font-size: 55px !important;
+        }
+        .need-caption {
+          font-size: 17px !important;
+        }
+        .need-cards {
+          div:nth-of-type(1) {
+            .need-icon {
+              width: 101px !important;
+              height: 101px !important;
+            }
+          }
+          .box {
+            .box-heading {
+              font-size: 23px !important;
+            }
+            .box-caption {
+              font-size: 17px !important;
+            }
+          }
+        }
+      }
+    }
+  }
+  .stats-section {
+    padding-top: 0px !important;
+    .container {
+      div div div div {
+        h2 {
+          font-size: 73px !important;
+        }
+        p {
+          font-size: 17px !important;
+        }
+      }
+    }
+  }
+  .speed-heading {
+    font-size: 55px !important;
+  }
+  .speed-caption {
+    font-size: 17px !important;
+  }
+  .speed-input {
+    width: 288px !important;
+    height: 53px !important;
+  }
+  .speed-btn {
+    padding: auto !important;
+    width: 114px !important;
+    font-size: 16px !important;
+  }
+  .plans-heading {
+    font-size: 55px !important;
+  }
+  .plans-caption {
+    font-size: 17px !important;
+    margin-bottom: 57px !important;
+  }
+  .my-card {
+    width: 372px !important;
+    height: 523px !important;
+    padding-top: 65px !important;
+    padding-bottom: 79px !important;
+    .card-body {
+      padding: 0px !important;
+      .plans-title {
+        font-size: 22px !important;
+        margin-bottom: 34px !important;
+      }
+      .card-text {
+        .money-txt {
+          font-size: 49px !important;
+        }
+      }
+    }
+  }
+  .my-btn {
+    margin-top: 42px !important;
+    margin-bottom: 0px !important;
+  }
+  .expert-heading {
+    font-size: 55px !important;
+  }
+  .expert-caption {
+    font-size: 17px !important;
+  }
+  .team-cards {
+    width: 269px !important;
+    height: 339px !important;
+    padding-top: 53px !important;
+    padding-bottom: 44px !important;
+  }
+}
+
+nav {
+  .container {
+    .nav-list {
+      ul {
+        li {
+          a {
+            position: relative;
+            text-decoration: none;
+            color: #212528;
+            transition: color 0.3s ease;
+            &::after {
+              content: "";
+              position: absolute;
+              bottom: -2px;
+              left: 0;
+              width: 0%;
+              height: 2px;
+              background-color: #6f77f1;
+              transition: width 0.3s ease;
+            }
+            &:hover::after {
+              width: 100%;
+            }
+            &.active::after {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.subscribe-input {
+  border-radius: 1px;
+  border-color: #c3c6d0;
+  padding-left: 10px;
+}
+@media (min-width: 1400px) {
+  .subscribe-input {
+    width: 25%;
   }
 }
