--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -904,8 +904,34 @@ body {
     padding-top: 53px !important;
     padding-bottom: 44px !important;
   }
+  .employee-name {
+    font-size: 22px !important;
+  }
+  .client-container {
+    min-width: 100%;
+  }
+  .clients-heading {
+    font-size: 55px !important;
+  }
+  .clients-caption {
+    font-size: 17px !important;
+  }
+  .subscribe-heading {
+    font-size: 50px !important;
+  }
+  .subscribe-caption {
+    font-size: 20px !important;
+  }
 }
-
+.client-container {
+  min-width: 100%;
+}
+.employee-name {
+  font-size: 18px;
+  &:hover {
+    color: #6f77f1;
+  }
+}
 nav {
   .container {
     .nav-list {
@@ -946,5 +972,13 @@ nav {
 @media (min-width: 1400px) {
   .subscribe-input {
     width: 25%;
+  }
+}
+.team-cards {
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+  &:hover {
+    border: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
