--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -156,6 +156,7 @@ body {
     color: white;
   }
   transform: scaleY(1.1);
+  transition: transform 0.1s ease-in;
   background: url("../assets/images/plans-bg.png") no-repeat;
   background-position: center center;
   background-size: 120% 120%;
